--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,18 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgb(255, 255, 255);
+  color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+container {
+  max-width: 142rem;
+  margin: 20px;
 }
 
 a {
@@ -64,5 +69,24 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+
+.grid-three--cols {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* Creates three equal-width columns */
+  gap: 20px; /* Space between the grid items */
+}
+
+@media (max-width: 1024px) {
+  .grid-three--cols {
+    grid-template-columns: repeat(2, 1fr); /* Two columns on medium screens */
+  }
+}
+
+@media (max-width: 768px) {
+  .grid-three--cols {
+    grid-template-columns: 1fr; /* One column on small screens */
   }
 }
