--- a/src/components/Netflix.css
+++ b/src/components/Netflix.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .card {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     list-style-type: none;
